--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(JSON_BuildTests OFF CACHE INTERNAL "")
 
 add_subdirectory(nlohmann_json)
 
-add_executable(search_engine main.cpp)
+add_executable(search_engine main.cpp
+                    src/converter.cpp)
+
+include_directories(search_engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries(search_engine PRIVATE nlohmann_json::nlohmann_json)
