--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "config": {
     "name": "SkillboxSearchEngine",
     "version": "0.1",
-    "max_responses": 5
+    "maxResponses": 5
   },
   "files": [
     "resources/file001.txt",
