--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "maxResponses": 5
   },
   "files": [
-    "resources/file001.txt",
-    "resources/file002.txt"
+    "../resources\\file001.txt",
+    "../resources\\file002.txt"
   ]
 }
